[build-system]
requires = ["pdm-backend", "numpy>=2.0"]
build-backend = "pdm.backend"

[project]
name = "lttbc"
version = "0.3.0"
description = "Largest triangle three buckets module for Python written in C"
requires-python = ">=3.10"
authors = [
    { name = "European XFEL GmbH", email = "dennis.goeries@xfel.eu" },
]
maintainers = [
    { name = "Dennis Goeries", email = "dennis.goeries@xfel.eu" },
]
dependencies = [
    "numpy>=2.0",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
readme = "README.md"

[project.urls]
"git" = "https://github.com/dgoeries/lttbc"

[tool.pdm.dev-dependencies]
lint = [
    "flake8",
]
test = ["pytest", "pytest-cov"]

[tool.pdm.scripts]
test = "pytest tests"
lint = "flake8 src/"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true # run setup.py for the C Extension
